--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,2 +1,4 @@
 
 appURL = https://tutorialsninja.com/demo/index.php?route=common/home
+email = nivangunevrushali.vn@gmail.com;
+password = Vrusha123$
