--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,13 @@
-
+# ? Application under test (AUT) URL
 appURL = https://tutorialsninja.com/demo/index.php?route=common/home
+
+# ? Test credentials
 email = nivangunevrushali.vn@gmail.com
 password = Vrusha123$
+
+# ? Execution environment
+# By default, tests will run on your local machine/browser
+execution_env = local
+
+# ? Uncomment this when you want to run tests on a Selenium Grid / Remote WebDriver
+# execution_env = remote
