--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -7,7 +7,7 @@ password = Vrusha123$
 
 # ? Execution environment
 # By default, tests will run on your local machine/browser
-#execution_env = local
+execution_env = local
 
 # ? Uncomment this when you want to run tests on a Selenium Grid / Remote WebDriver
-execution_env = remote
+#execution_env = remote
